# cli

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build-lib.py  cli_config.h.in
.github/workflows/: build.yml
src/: cli_config.h  main.cpp
src/CLI/: CLI.cpp  CLI.h
src/Cli/: Cli.cpp  Cli.h  Cli.hpp
src/Command/: Command.hpp
src/Flag/: Flag.cpp  Flag.h  Flag.hpp
tests/: test.cpp
tests/current_results/: 1.txt  10.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/expected_results/: 1.txt  10.txt  2.txt  3.txt  5.txt  6.txt  7.txt  8.txt
